--- a/posts/computer-tool/2024-03-18-lazy-dashboard.qmd
+++ b/posts/computer-tool/2024-03-18-lazy-dashboard.qmd
@@ -88,7 +88,11 @@ on:
 - 정보의 업데이트를 통해서 최신 대시보드 html 및 퍼블리싱 
 - gh-pages 브랜치에 서브되는 html 페이지의 암호화 
 
-해당 명령을 구현하는 사례 리포를 만들어 두었다. 아래를 참고하시라. 두번째 대시보드의 암호는 `0000`이다. 관심이 있으시면 repo의 내용을 뜯어보시면 되겠다. 리포를 개인적인 용도로 사용한다면 포크가 복제후 private으로 바꿔 사용하시면 되겠다.  
+해당 명령을 구현하는 사례 리포를 만들어 두었다. 아래를 참고하시라. 두번째 대시보드의 암호는 `0000`이다. 관심이 있으시면 repo의 내용을 뜯어보시면 되겠다. 리포를 개인적인 용도로 사용한다면 포크가 복제후 private으로 바꿔 사용하면 되겠다.  
 
 - github: <https://github.com/anarinsk/example_pages-with-password>
 - 대시보드: <https://anarinsk.github.io/example_pages-with-password/>{ target="_blank" }
+
+:::{ .column-margin }
+crontab을 설정할 수 있다면 초단위로 해두면 빠른 처리가 가능하지 않을까, 라고 생각할지 모르겠다. 깃허브는 최대 빠른 간격을 5분으로 제한하고 있다. 더 짧은 주기로 크론탭을 설정해도 5분 단위로 돌아간다. 
+:::
