--- a/posts/computer-tool/2024-03-18-lazy-dashboard.qmd
+++ b/posts/computer-tool/2024-03-18-lazy-dashboard.qmd
@@ -83,12 +83,14 @@ on:
 
 ## 데이터 업데이트 + 암호화?
 
-앞서 살펴본 두 개의 요소를 조합하는 것도 가능하다! 위의 문서 생성 및 퍼블리시 과정과 압호화 과정을 Github Actions에서 결합하면 된다. 깃헙 액션스는 정말로 강력한 기능이다! 방법은 다음과 같다. 
+앞서 살펴본 두 개의 요소를 조합하는 것도 가능하다! 위의 문서 생성 및 퍼블리시 과정과 압호화 과정을 Github Actions에서 결합하면 된다. 깃헙 액션스는 정말로 강력한 기능이다! 액션스를 통해서 아래와 같은 두 가지 과정을 구현할 수 있다. 
 
-- 정보의 업데이트를 통해서 최신 대시보드 html 및 퍼블리싱 
+- 필요한 데이터 업데이트 반영 후 대시보드 html 생성 및 퍼블리싱 
 - gh-pages 브랜치에 서브되는 html 페이지의 암호화 
 
-해당 명령을 구현하는 사례 리포를 만들어 두었다. 아래를 참고하시라. 두번째 대시보드의 암호는 `0000`이다. 관심이 있으시면 repo의 내용을 뜯어보시면 되겠다. 리포를 개인적인 용도로 사용한다면 포크가 복제후 private으로 바꿔 사용하면 되겠다.  
+해당 명령을 구현한 예시 리포를 만들어 두었다. 아래 첫번째 링크를 참고하시라. 첫번째 깃헙을 통해 서비스되는 정적웹 기반 대시보드가 두 번째 링크다. 암호는 `0000`이다. 
+
+관심이 있으시면 repo의 내용을 뜯어보시면 되겠다. 리포를 개인적인 용도로 사용한다면 포크가 복제후 private으로 바꿔 사용하면 되겠다.  
 
 - github: <https://github.com/anarinsk/example_pages-with-password>
 - 대시보드: <https://anarinsk.github.io/example_pages-with-password/>{ target="_blank" }
