--- a/posts/computer-tool/2024-03-18-lazy-dashboard.qmd
+++ b/posts/computer-tool/2024-03-18-lazy-dashboard.qmd
@@ -36,7 +36,7 @@ Quarto Dashboard를 활용해서 개인용 보드를 만들어 보자.
 
 ## Quarto Dashboards
 
-정적인 웹 페이지로 인터랙티비티가 제한된 대시보드(사실상의 웹 페이지)를 만들기로 했다면 툴을 골라보자. 딱 좋은 툴이 있으니 문서 작성 도구 Quarto에서 제공하는 [Quarto Dashboards](https://quarto.org/docs/dashboards/){ target="_blank" }이다. 쿼토에 익숙한 사람이라면 링크를 둘러보면 장점을 쉽게 파악할 수 있을 것이다. 자세한 설명은 생략한다. 
+정적인 웹 페이지로 인터랙티비티가 제한된 대시보드(사실상의 웹 페이지)를 만들기로 했다면 툴을 골라보자. 딱 좋은 툴이 있으니 문서 작성 도구 Quarto에서 제공하는 [Quarto Dashboards](https://quarto.org/docs/dashboards/){ target="_blank" }이다. 쿼토에 익숙한 사람이라면 링크의 내용을 보고 그 장점을 쉽게 파악할 수 있을 것이다. 자세한 설명은 생략한다. 
 
 :::{ .column-margin }
 정적 웹이라고 해서 인터랙티비가 전혀 없는 것은 아니다. 소개되어 있듯이, Plotly, Leaflet, Jupyter Widgets, htmlwidgets 등을 쓸 수 있어서 제한된 수준에서 인터랙티브한 요소를 구현할 수 있다. 
@@ -44,25 +44,27 @@ Quarto Dashboard를 활용해서 개인용 보드를 만들어 보자.
 
 ## 두 가지 문제 그리고 해결책 
 
-이렇게 대시보드를 만드는 것까지는 좋은데 당장 떠오르는 두 가지 결정적인 아쉬운 대목이 있다. 인증 시스템과 데이터 업데이트의 자동화가 그것이다. 일단 아쉬운대로 (불완전한) 두 가지 해결책을 제시하겠다. 
+이렇게 대시보드를 만드는 것까지는 좋은데 당장 떠오르는 두 가지 아쉬운 대목이 있다. (로그인을 포함한) 인증 시스템과 데이터 업데이트의 자동화가 그것이다. 일단 (아쉬운대로 불완전한) 두 가지 해결책을 제시해보자. 
 
 ### 최소한의 암호화 
 
-정적 웹이라는 것은 기본적으로 html 문서로 구성된다. 인증은 해당 문서의 열람 앞에 존재할 것이기 때문에 사실 그 부재를 아쉬워하는 것이 적절하지는 않다. 그럼에도 아쉽다! 깃허브 기준으로 private repo에서 pages를 만들면 전체 공개로 외부에 제공된다. credentials와 같은 민감한 정보는 리포를 private로 만들어 감출 수 있다. 대시 보드 자체에 올라가는 정보가 민감한 정보라면 어떻게 해야 할까? 최소한 페이지에 암호라도 있었으면 싶을 것이다. 이메일로 전달되는 각종 고지서에 적용된 암호화 정도면 충분하겠다. 
+정적 웹은 기본적으로 html 문서로 구성된다. 인증은 해당 문서의 열람 앞에 존재하는 것이고 따라서 그 부재를 탓할 수 없다. 그래도 아쉽다! 깃허브 기준으로 private repo에서 pages를 만들면 전체 공개로 외부에 제공된다. 데이터 업데이트에 필요한 credentials과 같은 민감한 정보는 리포를 private로 만들어 감출 수 있다. 하지만 대시 보드의 내용 자체가 민감한 정보라면 어떻게 해야 할까? 최소한 페이지에 암호라도 있다면 좋을 것이다. 이메일로 전달되는 각종 고지서에 적용된 암호화 정도면 충분한 경우도 있다. 
 
-[Staticrypt](https://github.com/robinmoisson/staticrypt){target="_blank"}이라는 도구를 쓰면 html 문서에 암호를 걸 수 있다. 해당 페이지를 깃허브 페이지스로 서브하면 암호를 먼저 입력해야 내용을 볼 수 있다. 이것이 제대로 된 로그인 시스템이라고 할 수는 없지만, 개인적인 용도의 안전 장치 정도로는 충분하다.
+[Staticrypt](https://github.com/robinmoisson/staticrypt){target="_blank"}는 이를 구현해주는 도구다. 이 녀석을 쓰면 html 문서에 암호를 걸 수 있다. 해당 페이지 호출할 때 암호를 먼저 입력해야 내용을 볼 수 있다. 이것이 제대로 된 로그인 시스템이라고 할 수는 없지만 개인적인 용도의 안전 장치로는 족하다.
 
 ### 데이터 업데이트 
 
-활용하는 데이터가 변하지 않는다면 해당 데이터를 한번 읽어서 대시보드를 제공하면 그만이다. 하지만 대시보드가 필요한 상황과 맥락에서 데이터가 이렇게 고정된 상황은 별로 없을 것이다. 데이터를 일정한 주기로 업데이트해야 한다면 어떻게 해야할까? 우선 데이터가 고빈도(high frequency)로 변하는 상황이라면 스트림릿과 같은 본격적인 대시보드 도구를 부리는 게 좋다. 이렇게 고빈도의 업데이트가 필요하지 않다면, 깃허브 페이지스를 통해서 데이터의 업데이트를 거의 완벽하게 구현할 수 있다. 
+활용하는 데이터가 변하지 않는다면 해당 데이터를 한번 읽어서 대시보드를 제공하면 그만이다. 하지만 대시보드가 필요한 상황과 맥락에서 데이터가 이렇게 고정되는 상황은 별로 없을 것이다. 데이터를 일정한 주기로 업데이트해야 한다면 어떻게 해야할까? 필요할 때마다 깃허브를 호출해서 페이지를 수동으로 말아도 되겠지만 그리 좋은 방법은 아니다. 
 
-깃허브는 actions라는 자동화 도구를 제공한다. 리포의 `.github/workflows` 내에 위치한 yml 파일을 통해 일정한 순서로 여러가지 작업을 지시할 수 있다. 데이터 업데이트를 위해서 지시할 작업은 간단하다. 이용자가 미리 정해둔 시간 간격을 기준 마다 문서를 다시 생성하면 된다. 이떄 코드도 같이 실행될텐데 해당 코드에 따라서 업데이트된 데이터를 불러올 수 있다. 
+데이터가 고빈도(high frequency)로 변하는 상황이라면 스트림릿과 같은 본격적인 대시보드 도구를 부리는 게 좋다. 업데이트의 빈도가 충분히 낮다면, 깃허브 Actions의 스크립트를 활용해 데이터의 자동 업데이트를 손쉽게 구현할 수 있다. 
+
+깃허브는 액션스를 활용하면 리포의 `.github/workflows`에 들어 있는 yml 파일을 통해 원하는 순서로 리포 내에서 여러가지 작업을 수행할 수 있다. 데이터 업데이트를 위해서 지시할 작업은 간단하다. 이용자가 미리 정해둔 시간 간격으로 문서를 다시 생성하면 된다. 이떄 코드도 같이 실행될텐데 해당 코드에서 업데이트된 데이터를 불러올 수 있다. 
 
 :::{ .column-margin }
-깃허브 액션스를 자세하게 다루지는 않겠다. 개념은 OS(주로 Ubuntu)를 불러와서 해당 OS 하에서 여러가지 작업을 자동화할 수 있는 도구다. Ubuntu를 좀 써봤다고 쉽게 생각하면 큰 코 다칠 수 있다. 예를 들어 깃헙 페이지스 하나 퍼블리시하는 데에도 여러가지 행동 조합이 필요하다. 따라서 개인지 작성하기 보다는 이미 작성된 actions를 가져다가 쓰는 것이 좋다. yml 코드를 보면 `uses: actions/checkout@v4`, `uses: actions/setup-python@v4`와 같은 내용을 볼 수 있다. 사전에 정의된 액션스를 가져다가 쓰는 것이고 필요할 경우 `with` 구문을 통해서 나에게 맞는 설정을 추가할 수 있다. 이런 식으로 기존에 검증된 actions 스크립트를 쓰는 것이 압도적으로 편리하고 안전하다. 
+여기서 깃허브 액션스를 자세하게 다루지는 않겠다. 개념은 OS(주로 Ubuntu)를 불러와서 해당 OS 하에서 여러가지 작업을 자동화할 수 있는 도구다. Ubuntu를 좀 써봤다고 쉽게 생각하면 큰 코 다칠 수 있다. 예를 들어 깃헙 페이지스 하나 퍼블리시하는 데에도 여러가지 행동 조합이 필요하다. 따라서 개인지 작성하기 보다는 이미 작성된 actions를 가져다가 쓰는 것이 좋다. yml 코드를 보면 `uses: actions/checkout@v4`, `uses: actions/setup-python@v4`와 같은 내용을 볼 수 있다. 사전에 정의된 액션스를 가져다가 쓰는 것이고 필요할 경우 `with` 구문을 통해서 나에게 맞는 설정을 추가할 수 있다. 이런 식으로 기존에 검증된 actions 스크립트를 쓰는 것이 압도적으로 편리하고 안전하다. 
 :::
 
-링크를 보면 GitHub Actions를 통해서 Quarto 문서를 생성하고 퍼블리싱하는 방법이 잘 소개되어 있다. 일정한 시간 단위로 자동화하고 싶다면 코드의 맨 윗 부분을 아래와 같이 수정하면 된다. 
+[여기](https://quarto.org/docs/publishing/github-pages.html#publish-action)를 보면 GitHub Actions를 통해서 Quarto 문서를 생성하고 퍼블리싱하는 방법이 잘 소개되어 있다. 일정한 시간 단위로 자동화하고 싶다면 코드의 맨 윗 부분을 아래와 같이 수정하면 된다. 
 
 ```yml 
 on:
@@ -79,11 +81,18 @@ on:
     - cron: '0 */3 * * *' # 매 3시간마다 실행
 ```
 
-`on` 항목에 `schedule`을 설정하고 `cron`을 쓰면 crontab 규칙에 따라서 실행 간격을 지정할 수 있다. crontab 규칙을 따르므로 유연하게 실행 간격의 룰을 정할 수 있다. 
+::: { .callout-note }
+# Code Note 
+- `on:` 뒤에 붙은 내용은 어떤 행위가 발생했을 때 스크립트를 실행하는지를 나타낸다. 
+- `workflow_dispatch`가 있다면 수동으로 실행할 수 있다. 
+- `push`가 있다면 푸시가 발생했을 때 실행된다. 
+- `schedule`이 있다면 일정한 시간 간격으로 실행된다. `cron`은 크론탭의 규칙을 따르고, 유연하게 실행 간격의 룰을 정할 수 있다. 
+:::
+
 
 ## 데이터 업데이트 + 암호화?
 
-앞서 살펴본 두 개의 요소를 조합하는 것도 가능하다! 위의 문서 생성 및 퍼블리시 과정과 압호화 과정을 Github Actions의 스크립트로 구현하면 된다. 깃헙 액션스는 정말로 강력한 기능이다! 액션스를 통해서 아래와 같은 두 가지 과정을 구현할 수 있다. 
+앞서 살펴본 두 개의 요소를 조합하는 것도 가능하다! 위의 문서 생성 및 퍼블리시 과정과 압호화 과정을 깃허브 액션스의 스크립트로 구현하면 된다. 깃헙 액션스는 정말로 강력한 기능이다! 액션스를 통해서 아래와 같은 두 가지 과정을 구현할 수 있다. 
 
 - 필요한 데이터 업데이트 반영 후 대시보드 html 생성 및 퍼블리싱 
 - gh-pages 브랜치에 서브되는 html 페이지의 암호화 
