--- a/posts/computer-tool/2024-03-18-lazy-dashboard.qmd
+++ b/posts/computer-tool/2024-03-18-lazy-dashboard.qmd
@@ -88,7 +88,7 @@ on:
 ::: { .callout-note }
 # Code Note 
 - `on:` 어떤 조건에서 스크립트를 실행하는지를 지정한다. 
-- `workflow_dispatch`가 있다면 수동으로 실행할 수 있다. 
+- `workflow_dispatch`는 github 웹 페이지에서 수동 실행 버튼을 활성화한다. 
 - `push`가 있다면 푸시가 발생했을 때 실행된다. 
 - `schedule`이 있다면 일정한 시간 혹은 시간 간격으로 스크립트를 실행할 수 있다. `cron`은 크론탭의 규칙을 따르고, 유연하게 실행 간격의 룰을 정할 수 있다. 
 :::
