--- a/posts/computer-tool/2024-04-03-r_with_pixi.qmd
+++ b/posts/computer-tool/2024-04-03-r_with_pixi.qmd
@@ -3,7 +3,7 @@ title: "R을 pixi로 깔아보자!"
 description: "R이 꼬여도 걱정 없다"   
 author: "JS HUHH"
 date: "04/03/2024"
-image: "./images/cat-sketch.webp"
+image: "./images/r-pixi.webp"
 categories: [computer-tool, r-stat]
 lightbox: auto
 #fig-align: center
@@ -11,7 +11,7 @@ filters:
    - lightbox
    #- line-highlight
 #jupyter: python3
-draft: true
+draft: false
 format:
   html:
     highlight-style: pygments
@@ -26,21 +26,23 @@ R을 pixi를 통해서 깔 수 있다.
 
 ## 왜 pixi인가? 
 
-나는 픽시를 사랑한다. 픽시를 쓰고부터 파이썬 패키지를 깔거나 세팅을 하는데 별 고민이 없다. 꼬이면 지우고 다시 깔면 되고, 망해도 지우면 그만이다. R을 이렇게 깔 수는 없을까? 문득 이런 생각이 들었다. pixi의 베이스가 되는 conda에 R이 있다. 그렇다면 pixi를 통해서도 깔 수 있는 거 아닐까? 
+픽시를 사랑한다. 픽시를 쓰고부터 파이썬 패키지를 깔거나 세팅을 하는데 별 고민이 없다. 꼬이면 지우고 다시 깔면 되고, (알 수 없는 이유로) 망하면 지워버리자. 
+
+R을 이렇게 깔 수는 없을까? 문득 이런 생각이 들었다. pixi의 베이스가 되는 conda에 R이 있다. 그렇다면 pixi를 통해서도 R을 깔 수 있는 거 아닐까? 
 
 이런 생각으로 쭉 해보니 잘 되더라. 이 포스팅은 까먹고 내용을 다시 찾을 나 놈을 위한 것이다. (전적으로!)
 
 ## 얻는 것과 잃는 것의 대차 대조 
 
-pixi로 깔아서 얻는 것은 앞서와 같다. 그리고 IDE로 VS Code를 쓴다면 천군만마와도 같은 GitHub Copilot을 부릴 수 있다. 엄청난 장점이다. 잃는 것은 무엇인가? R과 최고의 궁합을 자랑하는 RStudio를 잃는다는 뜻이다. RStudio Server에 커널을 연결할 수 있으면 좋겠는데 좀 더 비싼 기업용 버전인 workbench에서만 지원하는 듯 싶다. 
+pixi로 깔아서 얻는 것은 앞서와 같다. 그리고 IDE로 VS Code를 쓴다면 천군만마와도 같은 GitHub Copilot을 부릴 수 있다. 엄청난 장점이다. 잃는 것은 R과 최고의 궁합을 자랑하는 RStudio이다. RStudio Server에 커널을 연결할 수 있으면 좋겠는데 좀 더 비싼 기업용 버전인 workbench에서만 해당 기능을 지원하는 듯 싶다. 
 
-VS Code로도 장점이 충분한 것 같다. 아쉬움을 뒤로 하고 설치로 넘어가보자. 
+VS Code로도 장점이 충분한 것 같다. 아쉬움을 뒤로 하고 설치히는 방법으로 넘어가자. 
 
 ## pixi setting 
 
 다음과 같은 사용 환경을 전제한다. 
 
-- Windows 11 WSL 2 
+- Windows 11 WSL 2 or Macos (Sonoma with Silicon)
 - Ubutu 22.04 LTS 
 - pixi 설치 
 
@@ -68,19 +70,43 @@ $ pixi add python=3.11 r-base radian # 파이썬, r-base, radian 추가
 export R_LIBS_USER="[로컬 디렉토리]/.pixi/envs/default/lib/R/library"
 ```
 
-해당 환경을 활성화하면 이제 R의 라이브러가 해당 디렉토리 아래 깔리게 된다. 
+해당 환경을 활성화하면 이제 R의 라이브러가 해당 디렉토리 아래 깔리게 된다. 만일 기존에 설치된 R이 없거나 지웠다면 라이브러리의 위치는 픽시 아래로 잡힌다. 확인하는 방법은 R에서 `.libPaths()`를 실행하면 된다.
 
 ## VS Code 설정 
 
 먼저 R의 [extension](https://marketplace.visualstudio.com/items?itemName=REditorSupport.r)을 받아서 설치하자. 해당 확장을 설치한 후 몇 가지 설정을 바꿔야 한다. 
 
+:::{ layout="[1,1]" }
 
+![익스텐션의 설정으로 가자.](./images/pixi-r-1-min.png)
 
+![두 개 모두 적절한 위칠 바꿔주자](./images/pixi-r-2-min.png)
 
+:::
+
+이외에 `httpgd`를 쓰는 것을 체크하자. 
 
 ## VS Code에서의 활용 
+
+### WSL2
 
 <https://code.visualstudio.com/docs/languages/r>
 
 전체적인 지침은 링크에 잘 정리가 되어 있다. 
+
+1. `install.packages("languageserver")`를 설치한다. 
+2. `install.packages("httpgd")`를 설치한다.
+
+이제 그냥 쓰면 된다. 혹시 R 코드가 실행되지 않으면 터미널에 R을 띄우자. 
+
+### Macos 
+
+그냥 쓰는 데는 별 문제가 없다. C++을 컴파일할 때 제대로 하지 못한다. 따라서 C++을 쓰는 패키지들이 제대로 깔리지 않는다. 어떻게 해야 할까? 패키지를 깔 때, pixi의 셸 환경으로 들어가면 된다. 
+
+```shell
+$ pixi shell
+$ R or radian 
+> install.packages("...")
+```
+
 
