--- a/posts/computer-tool/2024-04-03-r_with_pixi.qmd
+++ b/posts/computer-tool/2024-04-03-r_with_pixi.qmd
@@ -26,17 +26,15 @@ Pixi로 R도 부릴 수 있다.
 
 ## 왜 pixi인가? 
 
-픽시를 사랑한다. 픽시를 쓰면서 파이썬 패키지를 깔거나 세팅을 할 때 고민하지 않는다. (알 수 없는 이유로) 꼬이면 지우고 다시 깔면 그만이다. 
+픽시를 사랑한다. 픽시를 쓰면서 파이썬 패키지를 깔거나 세팅을 할 때 고민하지 않는다. (알 수 없는 이유로) 꼬이면 지우고 다시 깔면 그만이다. R을 이렇게 파이썬처럼 운용할 수 없을까? 문득 이런 생각이 들더라. Pixi의 베이스가 되는 conda에 R이 있다. 그렇다면 pixi를 통해 R을 깔 수 있지 않을까? 
 
-R을 이렇게 파이썬처럼 운용할 수 없을까? 문득 이런 생각이 들더라. Pixi의 베이스가 되는 conda에 R이 있다. 그렇다면 pixi를 통해 R을 깔 수 있지 않을까? 
-
-이런 생각으로 쭉 해보니 의외로 되더라. 이 포스팅은 (전적으로!) 내용을 까먹고 헤맬 미래의 나 놈을 위한 것이다.
+이런 생각으로 쭉 해보니 의외로 잘 되더라. 이 포스팅은 (전적으로!) 이 내용을 까먹고 헤맬 미래의 나 놈을 위한 것이다.
 
 ## 얻는 것과 잃는 것
 
-R의 IDE로 VS Code를 쓴다면 천군만마와도 같은 GitHub Copilot을 부릴 수 있다. 엄청난 장점이다. 잃는 것은 R과 최고의 궁합을 자랑하는 RStudio이다. RStudio Server에 커널을 연결할 수 있으면 좋겠는데 좀 더 비싼 기업용 버전인 workbench에서만 해당 기능을 지원하는 듯 싶다. 
+R의 IDE로 VS Code를 쓴다면 천군만마와도 같은 GitHub Copilot을 부릴 수 있다. 엄청난 장점이다. 잃는 것은 R과 최고의 궁합을 자랑하는 RStudio이다. RStudio에 임의의 R 커널을 연결할 수 있으면 좋겠는데 좀 더 비싼 기업용 버전인 workbench에서만 해당 기능을 지원하는 듯 싶다. 
 
-RStudio는 아쉽지만, VS Code + pixi를 쓰는 것의 장점은 충분하다.  
+RStudio는 아쉽지만 VS Code + pixi를 쓰는 것의 장점이 아쉬움 이상이다.  
 
 ## Pixi setting 
 
@@ -56,7 +54,7 @@ $ pixi add python=3.11 r-base radian # 파이썬, r-base, radian 추가
 
 위 명령어를 실행하면 `./.pixi/envs/default` 폴더 아래 파이썬, R-base 그리고 radian이 설치된다. radian은 파이썬으로 작성된 일종의 대안 터미널이다. 꽤 쓸만하다. 
 
-필요한 R 패키지를 설치해야 하는데 아래 두 패키지는 꼭 설치하자. 
+VS Code에서 R을 쓰기 위해서 아래 두 패키지를 설치해야 한다. 
 
 ```R
 > install.packages("languageserver")
@@ -87,7 +85,7 @@ export R_LIBS_USER="[로컬 디렉토리]/.pixi/envs/default/lib/R/library"
 
 이외에 `httpgd`를 쓰는 것을 체크하자. 
 
-## VS Code에서의 활용 
+## VS Code로 R 쓰기  
 
 <https://code.visualstudio.com/docs/languages/r>
 
@@ -95,12 +93,7 @@ export R_LIBS_USER="[로컬 디렉토리]/.pixi/envs/default/lib/R/library"
 
 ### WSL2
 
-WSL2 환경에서 pixi+R의 조합이 문제 없이 잘 돌아간다. 
-
-1. `install.packages("languageserver")`를 설치한다. 
-2. `install.packages("httpgd")`를 설치한다.
-
-이제 그냥 쓰면 된다. 혹시 R 코드가 실행되지 않으면 터미널에 R을 띄우자. 
+WSL2 환경에서 pixi+R의 조합이 문제 없이 잘 돌아간다. 그냥 쓰면 된다. 혹시 R 코드가 실행되지 않으면 터미널에 R을 띄워주자. 
 
 ### Macos 
 
