--- a/posts/computer-tool/2023-11-03-first-thing-ubuntu.qmd
+++ b/posts/computer-tool/2023-11-03-first-thing-ubuntu.qmd
@@ -26,13 +26,31 @@ format:
 ## 넋두리 
 WSL이 생기면서 윈도에서도 리눅스를 제대로 쓸 수 있게 되었다. 리눅스(아마도 우분투)를 쓸 일이 많아진 만큼, 우분투 설치하고 (내 기준에서) 해야 할 일을 정리해보려 한다. 물론 이 포스트 멀지 않은 미래에 모든 걸 까먹을 나 놈을 위한 것이다. 
 
+## Meta 
+
+딱히 Ubuntu에 해당하는 내용은 아니지만 WSL에서 Ubuntu 설치하는 방법은 간단하게 다루고 넘어가겠다. 윈도 파워셸이나 명령 프롬프트에서 실행 가능하다. 
+
+```powershell
+> wsl -l # 설치된 WSL 목록 확인
+> wsl -l -o # 설치할 수 있는 배포판 확인 
+
+# 아래에서 UBUNTU는 특정 디스트로의 이름을 의미한다. 
+
+> wsl --install -d UBUNTU # 특정 디스트로 Ubuntu 설치
+> wsl --shutdown UBUNTU # Ubuntu 종료
+> wsl --unregister UBUNTU # Ubuntu 삭제
+```
+
 ## 터미널 
 
 보통 우분투를 설치하고 그 기기에 키보드와 마우스를 연결해서 쓰는 일은 드물지 않을까 싶다. 
 
 WSL을 예로 들어 보자. 윈도와 나란히 설치되어 독립적으로 운용되는, 즉 윈도 내부에 있지만 사실상 독립된 형태로 돌아가는 리눅스 서버가 WSL이다. 윈도에서 WSL을 쓴다면 해당 서버에 접속해 활용하게 된다. 이렇게 다른 OS(Windows, Macos)에서 우분투 서버에 접속해서 쓸 때는 관문 역할을 하는 터미널 앱이 중요하다. 윈도에서는 [윈도 터미널](https://learn.microsoft.com/ko-kr/windows/terminal/install)이 Macos에서는 [iTerm2](https://iterm2.com/)이 좋다. 
 
-접속하는 OS에 취향껏 터미널에서 쓸 폰트를 설치하면 된다. HACK Nerd 폰트 강추다! 
+접속하는 OS에 취향껏 터미널에서 쓸 폰트를 설치하면 된다. 
+
+ - HACK Nerd 폰트 좋다. 폼나틑 폰트다. 
+ - 가볍게 쓰고 싶다면, 아범의 [ligalex mono](https://github.com/ToxicFrog/Ligaturizer/releases) 폰트를 쓰자. IBM의 모노 플렉스 폰트에 리거쳐 문자를 더한 폰트다. 
 
 :::{.column-margin}
 요즘은 여러가지 이모지가 많이 활용되는데, 이를 제대로 쓰려면 Nerd 계열의 폰트를 설치하자. Hack Nerd 폰트는 [여기](https://www.nerdfonts.com/font-downloads)서 다운로드하자. 
