--- a/posts/computer-tool/2024-04-03-r_with_pixi.qmd
+++ b/posts/computer-tool/2024-04-03-r_with_pixi.qmd
@@ -168,7 +168,11 @@ Matrix 패키지가 버전이 맞지 않아서 설치가 안된다.
 
 ## Julia 설치하기 
 
-R에 비하면 훨씬 깔끔하고 운용이 쉽다. 다만 약간의 우회로가 필요하다. Julia를 바로 설치하면 OS에 따라서 설치가 되지 않는다. Juliaup을 먼저 설치하고 Pixi의 셸 환경 안에서 이를 이용해서 Julia를 설치하면 된다. 
+R에 비하면 훨씬 깔끔하고 운용이 쉽다. 다만 약간의 우회로가 필요하다. Conda를 이용해 Julia를 바로 설치해보면, OS에 따라서 설치가 되지 않는 경우가 있다. Juliaup을 먼저 설치하고 Pixi의 셸 환경 안에서 이를 이용해서 Julia를 설치하면 된다. 
+
+:::{.column-margin}
+Julia를 써보면 이 언어가 다른 어떤 고수준 프로그래밍 랭귀지에 비해서 "모던"하다는 사실을 느낄 수 있다. 우선 언어 자체의 설치가 간편하고, 패키지 설치 관리가 `toml`을 통해 이뤄진다. 
+:::
 
 ```zsh
 > pixi add juliaup
