--- a/posts/computer-tool/2023-08-27-pixi.qmd
+++ b/posts/computer-tool/2023-08-27-pixi.qmd
@@ -168,7 +168,9 @@ $ pixi add --pypi koreanize-matplotlib stargazer
 
 ## 유연함 
 
-`pixi init`을 실행할 때 pixi의 설정 파일을 제외하면 `.pixi` 이하의 파일들이 `.gitignore`에 포함된다. 따라서 해당 리포를 동기화한 후 `pixi install`을 실행하면 해당 환경이 그대로 복원된다. 디렉토리 별로 나누어 운용할 수도 있기 때문에 매우 유연한 작업 환경을 부릴 수 있다. 
+`pixi init`을 실행하면 `.pixi/`가 `.gitignore` 포함된다. 즉 작업 환경의 메타 데이터만 남고 해당 작업 환경 자체는 git에 동기화되지 않는다. 
+
+필요한 경우 리포를 동기화한 후 `pixi install`을 실행하면 해당 환경이 그대로 복원된다. 디렉토리 별로 나누어 운용할 수도 있기 때문에 매우 가볍고 유연하게 작업 환경을 부릴 수 있다. 
 
 ## VS Code 
 
