--- a/posts/computer-tool/2022-12-22-my-domains.qmd
+++ b/posts/computer-tool/2022-12-22-my-domains.qmd
@@ -96,9 +96,13 @@ $ dig www.lostineconomics.com +nostats +nocomments +nocmd
 
 윈도 파워셸에는 `dig` 명령어가 없다. 설치가 가능하니 검색을 통해 적절히 방법을 찾으시라. 결과가 `{이용자-ID}.github.io`까지 잘 타고 들어가는지 확인하면 된다. 뒤에서 다루겠지만 여기서 IP 주소도 확인할 수 있는데, 이 녀석들이 설정에서 다시 활용될 수 있다. 
 
-### 도메인 연결 2 (GitHub Pages)
+### 도메인 연결 (GitHub Pages)
 
-이제 연결을 윈하는 리포지터리의 `Settings` > `Pages`로 가자. "Custom domain" 메뉴에 앞서 설정한 주소, 즉 `www.lostineconomics.com`을 입력하고 저장하면 된다. 
+커스텀 도메인, 즉 `www.lostineconomics.com`을 기본 도메인으로 쓰고 싶다면 어떻게 할까? 즉, 리포지터리 이름들이 `/`아래 서브 도메인으로 들어가는 것이다. 이를 위해서는 특별한 리포리터리를 만들어야 한다. `{이용자-ID}.github.io`을 리포의 이름으로 갖는 리포를 만들자. 
+
+그리고 해당 리포의 커스텀 도메인을 `www.lostineconomics.com`로 설정한다. 해당 리포의 Pages의 경우 `index.md` 혹은 `index.html` 파일을 손봐서 적당한 주소로 포워딩되도록 조치하면 된다. 이렇게 해두면 이후 리포의 도메인에서 커스텀 도메인을 지정하지 않아도 `www.lostineconomics.com`이 기본 도메인이 된다. 
+
+만일 커스텀 도메인이 필요하다면, `www`을 다른 것으로 바꾸는 방식으로 페이지를 지정할 수 있다. 즉, `books.lostineconomics.com` 이런 식으로 커스텀 도메인을 지정하고 앞서 살펴본 필요한 조치를 취하면 된다. 
 
 ### 정리 및 응용 
 
