--- a/posts/computer-tool/2022-12-22-my-domains.qmd
+++ b/posts/computer-tool/2022-12-22-my-domains.qmd
@@ -98,11 +98,9 @@ $ dig www.lostineconomics.com +nostats +nocomments +nocmd
 
 ### 도메인 연결 (GitHub Pages)
 
-커스텀 도메인, 즉 `www.lostineconomics.com`을 기본 도메인으로 쓰고 싶다면 어떻게 할까? 즉, 리포지터리 이름들이 `/`아래 서브 도메인으로 들어가는 것이다. 이를 위해서는 특별한 리포리터리를 만들어야 한다. `{이용자-ID}.github.io`을 리포의 이름으로 갖는 리포를 만들자. 
+커스텀 도메인, 즉 `www.lostineconomics.com`을 기본 도메인으로 쓰면서 각 리포지터리 이름들이 `/`아래 서브 도메인으로 들어가는 형태를 생각해보자. 이를 위해서는 특별한 리포리터리를 만들어야 한다. `{이용자-ID}.github.io`을 이름으로 갖는 리포를 만들자. 그리고 이 리포의 커스텀 도메인을 `www.lostineconomics.com`로 설정한다. 해당 리포의 Pages의 경우 `index.md` 혹은 `index.html` 파일을 고쳐서 적당한 주소로 포워딩되도록 처리하자. 이렇게 해두면 이후 리포의 도메인에서 커스텀 도메인을 지정하지 않아도 `www.lostineconomics.com`이 내 계정의 기본 도메인이 된다. 
 
-그리고 해당 리포의 커스텀 도메인을 `www.lostineconomics.com`로 설정한다. 해당 리포의 Pages의 경우 `index.md` 혹은 `index.html` 파일을 손봐서 적당한 주소로 포워딩되도록 조치하면 된다. 이렇게 해두면 이후 리포의 도메인에서 커스텀 도메인을 지정하지 않아도 `www.lostineconomics.com`이 기본 도메인이 된다. 
-
-만일 커스텀 도메인이 필요하다면, `www`을 다른 것으로 바꾸는 방식으로 페이지를 지정할 수 있다. 즉, `books.lostineconomics.com` 이런 식으로 커스텀 도메인을 지정하고 앞서 살펴본 필요한 조치를 취하면 된다. 
+만일 커스텀 도메인이 필요하다면, `www`을 다른 것으로 바꾸는 방식으로 페이지를 지정할 수 있다. 즉, `books.lostineconomics.com` 이런 식으로 커스텀 도메인을 지정하고 앞서 살펴본 필요한 조치를 취하면 된다. 다만 이런 주소의 경우 `/`로 시작하는 서브 도메인은 설정할 수 없다. 
 
 ### 정리 및 응용 
 
