--- a/posts/computer-tool/2022-12-22-my-domains.qmd
+++ b/posts/computer-tool/2022-12-22-my-domains.qmd
@@ -40,7 +40,7 @@ draft: false
 
 ## GitHub에 보유 도메인 소유 증명하기 
 
-GitHub Pages는 훌륭한 스태틱 웹 서비스다. js, css 정도를 쓰는 html 문서를 전달하는 데에는 이보다 싸고 편한 서비스를 찾기 어려울 듯 싶다. GitHub Pages는 개별 리포의 주소를 외부 도메인과 연결하는 서비스도 제공한다. 다만 연결을 위해 몇 가지 절차를 거쳐야 한다. 
+GitHub Pages는 훌륭한 스태틱 웹 서비스다. js, css 정도를 쓰는 html 문서를 전달하는 데에는 이보다 싸고 (무료다!), 편한 서비스를 찾기 어려울 듯 싶다. GitHub Pages는 개별 리포의 주소를 외부 도메인과 연결하는 서비스도 제공한다. 다만 연결을 위해 몇 가지 절차를 거쳐야 한다. 
 
 ### 도메인 확인하기 1 (GitHub)
 
@@ -52,7 +52,7 @@ GitHub Pages는 훌륭한 스태틱 웹 서비스다. js, css 정도를 쓰는 h
 ![](images/verifying-domain-masked.png)
 :::
 
-자세한 내용은 [여기](https://docs.github.com/ko/pages/configuring-a-custom-domain-for-your-github-pages-site/verifying-your-custom-domain-for-github-pages)를 확인하자. 그런데 이렇게 도메인을 연결해도 actions의 프로세스에 따라서 custom domain이 풀리는 경우가 있다. 이때 필요한 것이 `CNAME` 파일이다. 페이지가 만들어지는 리포의 디렉토리(보통은 root)에 `CNAME` 파일을 만들고, 그 안에 연결할 도메인 이름을 적어주면 된다. 이렇게 하면 페이지를 퍼블리싱할 때 해당 도메인이 함께 설정된다. 
+자세한 내용은 [여기](https://docs.github.com/ko/pages/configuring-a-custom-domain-for-your-github-pages-site/verifying-your-custom-domain-for-github-pages)를 확인하자. 그런데 이렇게 도메인을 연결해도 actions의 프로세스에 따라서 custom domain이 풀리는 경우가 있다. 이때 필요한 것이 `CNAME` 파일이다. 페이지가 만들어지는 리포의 디렉토리(보통은 root)에 `CNAME` 파일을 만들고, 그 안에 연결할 도메인 이름을 적어주면 된다. 이렇게 하면 페이지를 퍼블리싱할 때 해당 도메인이 함께 설정된다. 페이지스 설정에 `CNAME` 파일이 함께 만들어지는 경우가 있으면 그대로 활용하면 되고 만들어지지 않았다면 추가해서 넣어주면 된다. 
 
 
 ### 도메인 확인하기 2 (Google Domains)
@@ -98,19 +98,24 @@ $ dig www.lostineconomics.com +nostats +nocomments +nocmd
 
 ### 도메인 연결 (GitHub Pages)
 
-커스텀 도메인, 즉 `www.lostineconomics.com`을 기본 도메인으로 쓰면서 각 리포지터리 이름들이 `/`아래 서브 도메인으로 들어가는 형태를 생각해보자. 이를 위해서는 특별한 리포리터리를 만들어야 한다. `{이용자-ID}.github.io`을 이름으로 갖는 리포를 만들자. 그리고 이 리포의 커스텀 도메인을 `www.lostineconomics.com`로 설정한다. 해당 리포의 Pages의 경우 `index.md` 혹은 `index.html` 파일을 고쳐서 적당한 주소로 포워딩되도록 처리하자. 이렇게 해두면 이후 리포의 도메인에서 커스텀 도메인을 지정하지 않아도 `www.lostineconomics.com`이 내 계정의 기본 도메인이 된다. 
+커스텀 도메인, 즉 `www.lostineconomics.com`을 기본 도메인으로 쓰면서 각 리포지터리 이름들이 `/`아래 서브 디렉토리처럼 들어가는 URL을 생각해보자. 이를 구현하려면 특별한 리포리터리를 만들어야 한다. `{이용자-ID}.github.io`을 이름으로 갖는 리포를 생성하자. 그리고 이 리포의 GitHub Pages 설정에서 커스텀 도메인을 `www.lostineconomics.com`로 설정한다. 해당 리포의 Pages의 경우 `index.md` 혹은 `index.html` 파일을 고쳐서 적당한 주소로 포워딩되도록 처리하자. 이렇게 해두면 이후 리포의 도메인에서 커스텀 도메인을 지정하지 않아도 `www.lostineconomics.com`이 내 계정의 기본 도메인이 된다. 
 
 만일 커스텀 도메인이 필요하다면, `www`을 다른 것으로 바꾸는 방식으로 페이지를 지정할 수 있다. 즉, `books.lostineconomics.com` 이런 식으로 커스텀 도메인을 지정하고 앞서 살펴본 필요한 조치를 취하면 된다. 다만 이런 주소의 경우 `/`로 시작하는 서브 도메인은 설정할 수 없다. 
 
 ### 정리 및 응용 
 
-흐름을 정리해보자. 도메인의 네임 서버(DNS)가 {이용자-ID}.github.io까지 타고 들어가면 깃허브 페이지스의 설정이 해당 주소를 해당 페이지스의 랜딩 페이지와 연결한다. 따라서 크게 작업 흐름을 정리해보면 다음과 같다. 
+흐름을 정리해보자. 구입한 도메인의 네임 서버(DNS)가 {이용자-ID}.github.io까지 타고 들어가면 깃허브 페이지스의 설정이 해당 주소를 해당 페이지스의 랜딩 페이지와 연결한다. 따라서 크게 작업 흐름을 정리해보면 다음과 같다. 
 
-1. 구글 도메인스에서 내가 원하는 도메인 이름이 것히브 페이지스 도메인(`{개별-ID}.github.io`)에 연결되도록 설정한다. 
-2. 1이 되도록 하기 위해서 깃허브에서 내가 구입한 도메인을 인증헤야 한다. 
+1. 사용하려는 도메인 이름이 것히브 페이지스 도메인(`{개별-ID}.github.io`)에 연결되도록 설정한다. 
+2. 1을 구현하려면 깃허브에서 내가 구입한 도메인을 `txt` 파일을 통해 인증헤야 한다. 
 3. 각 리퍼지토리의 깃허브 페이지스 설정에서 1의 도메인이 해당 리포의 페이지를 호출할 수 있도록 연결한다. 
 
-도메인으로 꼭 `www`만 써야 할까? 아니다. 다른 이름도 가능하다. 예를 들어, DNS의 레코드 관리에서 호스트의 이름으로 `blog` 설정하면 이 녀석은 `blog.lostineconomics.com`을 `anrinsk.github.io`까지 연결하고, 개별 리포에서 `blog.lostineconomics.com`을 지정하면 해당 깃허브 페이지스로 다시 연결된다. 같은 도메인 주소를 갖고 있어도 앞에 호스트 네임을 바꿔서 설정하면, 여러 깃허브 페이지스로 연결할 수 있다. 
+도메인으로 꼭 `www`만 써야 할까? 아니다. 다른 이름도 가능하다. 이 페이지를 예로 들어보자. 
+
+- DNS의 레코드 관리에서 호스트의 이름으로 `blog` 설정하고 `blog.lostineconomics.com`을 `anrinsk.github.io`까지 연결한다. 
+- 이 블로그를 담고 있는 리포에서 커스텀 도메인으로 `blog.lostineconomics.com`을 지정하면 이 주소는 이 블로그의 깃허브 페이지스로 연결된다. 
+- `anarinsk.github.io`라는 이름의 리포가 생성하고 이 리포의 커스텀 도메인은 `www.lostineconomics.com`이다. `index.html`을 통해 `blog.lostineconomics.com`으로 연결되도록 했다. 즉, `www.lostineconomics.com`이 호출되면 기본으로 `blog.lostineconomics.com`으로 연결된다. 
+- 이제 이 계정의 리포들의 페이지스는 기본으로 `www.lostineconomics.com`을 기본 주소로 지닌다. 만일 별도의 커스텀 도메인이 필요하다면, `blog.lostineconomics.com`처럼 호스트 이름을 바꾸어서 설정하면 된다.
 
 ## 곁눈질; `www`가 없는 호출 포위딩하기 
 
