--- a/research.qmd
+++ b/research.qmd
@@ -6,11 +6,10 @@ listing:
     - research-items.yaml
   type: default
   categories: true
-#description: (Illustration by Arthur B. Frost)
-#image: "title_images/project-3.jfif"
+  image-placeholder: images/paper-1.webp
 ---
 
-This is the page where research papers and research notes written by Junsok Huhh are listed. If you have any question/comment, please contact [me](anarinsk@gmail.com).
+This is the page where research papers and research notes written by Junsok Huhh are listed. If you have any question/comment, please contact <a href="mailto:anarinsk@gmail.com">me</a>
 
 --------------
 
