--- a/posts/computer-tool/2024-04-03-r_with_pixi.qmd
+++ b/posts/computer-tool/2024-04-03-r_with_pixi.qmd
@@ -14,7 +14,7 @@ filters:
 draft: false
 format:
   html:
-    highlight-style: pygments
+    highlight-style: github
     #code-line-numbers: true
     code-block-bg: true
     code-block-border-left: "#31BAE9"
