--- a/posts/computer-tool/2023-08-27-pixi.qmd
+++ b/posts/computer-tool/2023-08-27-pixi.qmd
@@ -13,8 +13,10 @@ lightbox: auto
 draft: false
 format:
   html:
-    code-line-numbers: true
-    highlight-style: arrow
+    #code-line-numbers: true
+    highlight-style: github
+    code-block-bg: true
+    code-block-border-left: "#31BAE9"
 ---
 
 ## TL; DR
