--- a/posts/computer-tool/2024-06-06-google-sheet-api.qmd
+++ b/posts/computer-tool/2024-06-06-google-sheet-api.qmd
@@ -77,7 +77,7 @@ API를 활성화해야 한다. API를 활성화하는 메뉴에서 @fig-2\a 와 
 :::
 
 :::{.column-margin}
-가장 흔히 저지르를 실수가 public 계정의 github에 해당 파일을 넣어두는 것이다. 이 점 각별히 주의하도록 하자. public 계정이라도 마스킹 처리가 부분적으로 가능하고, private 계정이라고 해도, GitHub Pages 서비스는 가능하다. 
+public 계정의 github에 크리덴셜 파일을 넣어두는 것이 가장 흔한 실수이다. 이 점 각별히 주의하도록 하자. public 계정이라도 마스킹 처리가 부분적으로 가능하고, private 계정이라고 해도, GitHub Pages 서비스는 가능하다. 
 :::
 
 ### Google Spread Sheet 공유하기
