--- a/posts/computer-tool/2024-06-06-google-sheet-api.qmd
+++ b/posts/computer-tool/2024-06-06-google-sheet-api.qmd
@@ -60,7 +60,7 @@ API를 활성화해야 한다. API를 활성화하는 메뉴에서 @fig-2\a 와 
 ### 키 생성하기 
 
 - @fig-5\a 에서 생성된 서비스 계정을 클릭한다. 
-- @fig-6\a 에서 보듯이 "키" 탭에서 JSON으로 생성하면 해당 JSON 파일이 다운로드 된다. 이 파일을 파이썬에서 구글 시트에 접근하는데 활용한다. 이 파일은 패스워드가 같은 것이므로 노출되지 않도록 주의하자.
+- @fig-6\a 에서 보듯이 "키" 탭에서 JSON으로 생성하면 해당 JSON 파일이 다운로드 된다. 파이썬이 구글 시트에 접근하는데 파일을 활용한다. 이 녀석은 패스워드와 같은 것이므로 노출되지 않도록 주의하자.
 
 :::{layout="[[1, -0.1, 1]]" layout-valign="bottom"}
 ![로봇 계정 선택](./images/gss-05.jpeg){#fig-5} 
