--- a/posts/stats-simple/2024-02-28-p-value.qmd
+++ b/posts/stats-simple/2024-02-28-p-value.qmd
@@ -121,9 +121,14 @@ $$
 
 증거 E를 관찰했을 때 영가설을 기각할 확률을 높이려면 위의 확률을 낮춰야 한다. $\alpha$와 $\beta$가 모두 낮을수록 해당 확률은 낮아진다. 그렇다면 이 둘을 모두 낮추면 좋지 않을까? 불행하게도 이는 불가능하다. 
 
-:::{layout=[[-1,4,-1]] layout-valign="bottom"}
+:::{layout="[[1,1],[-0.2, 1, -0.2]]" layout-valign="bottom"}
 
-![기준 점을 잡게 되면 1종 오류와 2종 오류의 트레이드오프가 발생한다.](https://i.stack.imgur.com/x1GQ1.png)
+![1종 오류는 오탐, 즉 영가설을 기각했으나 이것이 틀릴 확률이다.](https://www.scribbr.com/wp-content/uploads/2021/01/type-i-error-rate.png)
+
+![2종 오류는 미탐, 즉 영가설을 채택했으나 이것이 틀릴 확률이다.](https://www.scribbr.com/wp-content/uploads/2021/01/type-ii-error-rate.png)
+
+![영가설의 채택과 기각의 기준을 움직이게 되면 $\alpha$와 $\beta$ 사이에 트레이드오프가 발생한다.](https://www.scribbr.com/wp-content/uploads/2021/01/type-i-and-type-ii-error.png)
+
 :::
 
 위 그림을 보자. 영가설을 잡았고 이론적인 대립가설은 그림과 같다. 만일 영가설과 대립가설이 충분히 떨어져 있어서 겹치는 부분이 없다면 행복할 것이다. 두 에러 모두 0으로 만드는 것이 가능하다. 하지만 이런 경우는 대체로 흥미롭지 않은 경우다. 통계적인 작업이 필요하지 않은 자명한 경우가 거의 대분일 것이다. 만일 사람들이 흥미로워하는데도 이런 통계학적인 상태에 있는 주제가 있다면 어서 논문을 쓰시기 바란다! 
