--- a/posts/econ-simple/2022-04-30-gdp-import.qmd
+++ b/posts/econ-simple/2022-04-30-gdp-import.qmd
@@ -24,10 +24,11 @@ $$
 |$X$|수출|
 |$M$|수입|
 
-저 항등식만 보면 수입이 줄면 $Y$가 늘 것 같다. 그런데 이건 오해다. 두 가지 측면에서 생각을 해보자. 
+저 '항등식'만 보면 수입이 줄면 $Y$가 늘 것 같다. 무엇보다도 항등식이다. 따라서 $Y$의 정의가 저렇다는 것이지, $Y$가 저 5가지 항목으로 구성된다는 의미가 아니다. 이걸 오해하면 수입이 줄면 GDP가 늘어난다고 주장한다. 두 가지 측면에서 생각을 해보자. 
 
-1. GDP는 '국내' 총생산이다. 즉, 1년 동안 국내에서 생산된 재화와 서비스의 총량을 측정한다. 그런데 수입품은 국내에서 생산된 것이 아니다. 따라서 빼주는 게 맞다. 
-2. 그런데 수입이 줄면 GDP가 주는 게 아닌가? 아니다. 왜냐하면 앞에 $C$, $I$, $G$는 각각 수입품에 관한 소비, 투자, 정부 지출을 포함하고 있기 때문이다. 즉, $C = C_{d} + C_{m}$, 즉 국내에서 생산된 제품에 관한 소비($C_d$)와 해외에서 생산된 소비($C_m$)을 포함하고 있다. GDP란 국내 총생산을 측정하는 것이므로 $C_m$을 빼주는 게 맞다. 
+- GDP는 '국내' 총생산이다. 즉, 1년 동안 국내에서 생산된 재화와 서비스의 총량을 측정한다. 그런데 수입품은 국내에서 생산된 것이 아니다. 논리적으로 수입이 늘건 줄건 국내 총생산에는 큰 영향을 주지 않는 것이 정상이다. 물론 국내 변수들이 수입의 함수라면 이야기가 다르겠지만 저 항등식이 그런 깊은 뜻까지 담고 있는 것 같지는 않다. 
+
+- 어쨌든 식으로 보면 수입이 줄면 GDP가 주는 게 아닌가? 아니다. 왜냐하면 앞에 $C$, $I$, $G$는 각각 수입품에 관한 소비, 투자, 정부 지출을 포함하고 있기 때문이다. 즉, $C = C_{d} + C_{m}$, 즉 국내에서 생산된 제품에 관한 소비($C_d$)와 해외에서 생산된 소비($C_m$)을 포함하고 있다. GDP란 국내 총생산을 측정하는 것이므로 $C_m$을 빼주는 게 맞다. 중복 계산을 방지하기 위해서 빼야 할 것은 빼는 것이라고 보면 되겠다. 
 
 즉, 식을 재구성해보면 이렇다. 
 
@@ -35,7 +36,7 @@ $$
 (C_d + I_d + G_d) + \overbrace{(C_m + I_m + G_m)}^{M} + X - M 
 $$
 
-정의상 $C_m + I_m + G_m = M$이 되기 때문에 M이 늘고 주는 것은 GDP에 아무런 영향을 주지 않는다. GDP를 측정하기 위한 회계상의 이유로 $M$이 들어간 것이지 $M$의 변화가 독자적으로 GDP를 변화시키지는 않는다. 
+정의상 $C_m + I_m + G_m = M$이 되기 때문에 $M$이 늘고 주는 것은 GDP에 아무런 영향을 주지 않는다. GDP를 측정하기 위한 회계상의 이유로 $M$이 들어간 것이지 $M$의 변화가 독자적으로 GDP를 변화시키지는 않는다. 
 
 ## 다른 주장 
 
@@ -61,6 +62,6 @@ Noahpinion에서 예시했듯이 이렇게 볼 수도 있을 것이다.
 ## 참고 
 
 Noahpinion, [Imports do not subtract from GDP](https://noahpinion.substack.com/p/imports-do-not-subtract-from-gdp?s=r)
-
+Saylor Academy, [GDP and National Academy](https://saylordotorg.github.io/text_international-economics-theory-and-policy/s16-02-national-income-or-product-ide.html)
 
 
