--- a/posts/linear-algebra/2020-12-16-measuring-distance.qmd
+++ b/posts/linear-algebra/2020-12-16-measuring-distance.qmd
@@ -3,7 +3,7 @@ title:  Projection and Distance
 description: 프로젝션과 거리 측정에 관해 알아보자.
 author: "JS HUHH"
 date: "12/16/2020"
-image: "https://i.ytimg.com/vi/kjBOesZCoqc/maxresdefault.jpg"
+image: "./images/cats-matrix.webp"
 categories: [linear-algebra]
 draft: false
 ---
