--- a/posts/computer-tool/2024-07-01-quarto-put-figure.qmd
+++ b/posts/computer-tool/2024-07-01-quarto-put-figure.qmd
@@ -1,6 +1,6 @@
 ---
-title: "Quarto 문서에서 편하게 그림 정렬하는 법" 
-description: "그림을 편하게 쓰자"   
+title: "Quarto 문서에서 그림 정렬하기" 
+description: "그림을 다음대로 놓자!"   
 author: "JS HUHH"
 date: "07/01/2024"
 image: "./images/cats-put-figure.webp"
@@ -113,17 +113,11 @@ ax.grid(True)
 plt.show()
 ```
 
-반면 아래의 코드를 보자. 아래 코드는 위의 코드를 다음 코드로 감싼 형태이다. 그림의 크기는 `fig.set_size_inches(3, 3)`로 지정했다.
-
-```python 
-:::{layout="[-5, 10, -5]"}
-CODE 
-:::
-```
+반면 아래의 코드를 보자. 이 코드는 `:::{layout="[-5,10,-5]"} ... :::`가 감싸고 있으며, 그림의 크기는 `fig.set_size_inches(3, 3)`로 지정했다.
 
 :::{layout="[-5, 10, -5]"}
 ```{python}
-#| echo: false
+#| echo: true
 #| label: fig-polar-2
 #| fig-cap: "A line plot on a polar axis"
 
