--- a/posts/linear-algebra/2021-01-06-vector-geometry-2.qmd
+++ b/posts/linear-algebra/2021-01-06-vector-geometry-2.qmd
@@ -3,7 +3,7 @@ title: Vector Geometrically, part 2
 description: 벡터 공간의 기하적 특성
 author: "JS HUHH"
 date: "01/06/2021"
-image: "https://i.ytimg.com/vi/kjBOesZCoqc/maxresdefault.jpg"
+image: "./images/cats-matrix.webp"
 categories: [linear-algebra]
 draft: false
 ---
@@ -67,17 +67,15 @@ $$
 
 ### Subset vs subspace 
 
-부분집합은 원래 집합에 일정한 조건을 부여한 것이고, 이 점에서는 서브 스페이스 역시 부분 집합에 속한다. 다만 모든 부분 집합이 서브 스페이스가 되진 않는다. 이 점에서 서브 스페이스의 조건이 보다 제약적이다. 
+부분집합은 원래 집합에 일정한 조건을 부여한 것이다. 즉 원래 집합의 원소를 모아서 만든 집합니다. 이 점에서는 서브 스페이스 역시 부분 집합에 속한다. 
 
-다음과 같은 두 방정식의 해를 비교해보자. $A \vec x = \vec b$, $A \vec x = \vec 0$
+반대로 모든 부분 집합이 서브 스페이스가 되진 않는다. 이 점에서 서브 스페이스의 조건이 보다 제약적이다. 서브 스페이스란 해당 부분 집합이 자체로 벡터 스페이스가 되어야 한다. 즉, 영 벡터를 포함하고, 덧셈과 스칼라 곱에 대해 닫혀 있어야 한다.
 
-$A \vec v_1 = \vec b$와 $A \vec v_2 = \vec b$를 생각해보자. $A(\vec v_1 + \vec v_2)$는 원래의 벡터 스페이스에 들어 있는가? 
+예를 들어보자. $\mathbb R^3$에서 모든 벡터의 첫번째 요소가 0인 집합은 $\{ (0, y, z) | y, z \in \mathbb R \}$은 서브 스페이스다. 이는 영 벡터를 포함하고, 덧셈과 스칼라 곱에 대해 닫혀 있기 떄문이다. 
 
-$$
-A(\vec v_1 + \vec v_2) = 2 \vec b
-$$ 
+반면 $(1,0,0)$, $(0, 1, 1)$, $(0, 0, 1)$을 원소로 하는 부분 집합이 있다고 하자. 이 부분 집합은 벡터 스페이스가 될 수 없다. 우선 $(0,0,0)$을 포함하고 있지 않으며 덧셈이 대해서 닫혀 있지도 않고, 스칼라 곱에 대해서도 닫혀 있지 않다. 
 
-$\vec b = \vec 0$가 아니라면, $\vec v_1 + \vec v_2$는 해가 될 수 없다. 조금 더 자세하게 표현해보자. 
+### Solution space  
 
 $A \vec v = \vec b$의 해 공간은 다음과 같은 완전해의 집합이다. 
 
@@ -85,7 +83,7 @@ $$
 \{ \vec c + \vec v_n\} \text{ where }\vec v_n \in \mathcal N (A)
 $$
 
-즉, 해 공간은 특수해(particular solution) $\vec c$와 널 스페이스에 속한 벡터의 합으로 구성된다. 해 공간의 원소 하나를 $\vec x_1 = \vec c + \vec v_1$이라고 하고 다른 하나를 $\vec x_2 = \vec c + \vec v_2$라고 하자. 이 둘을 더하면, $2 \vec c + \vec v_1 + \vec v_2$가 된다. 이것이 해 공간 안에 있어야 하는데, $\vec c \neq 0$이면 성립하지 않는다. 
+해 공간은 특수해(particular solution) $\vec c$와 널 스페이스에 속한 벡터의 합으로 구성된다. 해 공간의 원소 하나를 $\vec x_1 = \vec c + \vec v_1$이라고 하고 다른 하나를 $\vec x_2 = \vec c + \vec v_2$라고 하자. 이 둘을 더하면, $2 \vec c + \vec v_1 + \vec v_2$가 된다. 이것이 해 공간 안에 있어야 하는데, $\vec c \neq 0$이면 성립하지 않는다.따라서 완전해의 집합은 벡터 서브스페이스가 아니다. 
 
 한편 $\mathcal N(M)$은 자연스럽게 벡터 공간을 이룬다. 더한 것도 $\vec 0$에 있고, 스칼라 곱 역시 마찬가지다. 참고로 아래에서 보겠지만, $\mathcal R(M)$, $\mathcal C(M)$, $\mathcal N(M)$, $\mathcal N(M^T)$를 네 개의 근본 서브 스페이스라고 부른다. 네 개는 밀접한 연관을 지니고 있다. 
 
