--- a/posts/computer-tool/2024-07-01-quarto-put-figure.qmd
+++ b/posts/computer-tool/2024-07-01-quarto-put-figure.qmd
@@ -119,7 +119,7 @@ plt.show()
 1. 그림의 크기를 줄이고 싶다.
 2. 캡션이 축소된 그림에 맞춰 시작되도록 하고 싶다.
 
-아래의 코드를 보자. 이 코드는 `:::{layout="[-5,10,-5]"} ... :::`가 감싸고 있으며, 그림의 크기는 `fig.set_size_inches(3, 3)`로 지정했다. `:::{layout...`에 해당하는 부분은 그림의 전체적인 크기를 조절하는 데 사용한다. R의 경우 이 지정만으로 그림의 비율에 맞게 줄어드는데, 파이썬의 경우에는 이렇게 작동하지 않았다. 아럐 사례를 보자. 
+아래의 코드를 보자. 이 코드는 `:::{layout="[-5,10,-5]"} ... :::`가 감싸고 있으며, 그림의 크기는 `fig.set_size_inches(3, 3)`로 지정했다. `:::{layout...`에 해당하는 부분은 그림의 전체적인 크기를 조절하는 데 사용한다. R의 경우 이 지정만으로 그림의 비율에 맞게 줄어드는데, 파이썬의 경우에는 이렇게 작동하지 않았다. 아래의 경우를 보자. 화면 비율이 잘 맞지 않는다는 것을 알 수 있다. 
 
 :::{layout="[-5, 10, -5]"}
 ```{python}
