--- a/posts/linear-algebra/2021-01-10-Eigenspace-1.qmd
+++ b/posts/linear-algebra/2021-01-10-Eigenspace-1.qmd
@@ -3,7 +3,7 @@ title:  Eigenspace, part 1
 description: 아이겐 공간을 이해보자. 
 author: "JS HUHH"
 date: "01/10/2021"
-image: "https://i.ytimg.com/vi/kjBOesZCoqc/maxresdefault.jpg"
+image: "./images/cats-matrix.webp"
 categories: [linear-algebra]
 draft: false
 ---
@@ -126,7 +126,7 @@ $$
 
 대각 행렬 $\Lambda$는 아이겐벡터들로 구성된 아이겐 공간의 기저(아이겐벡터)의 크기를 나타낸다. 
 
-### Eat this! 
+### 외우자!
 
 대각화를 통해서 아이겐밸류의 중요한 특성 두 가지를 다시 음미해보자. 
 
@@ -232,14 +232,17 @@ Orthogonal 기저는 어떻게 만들까? 먼저 과정을 살펴보자.   .
 - $e_1 = v_1$
 - $e_2 = v_2 - \Pi_{e_1}(v_2)$
 
-![Gram-Schmidt 분해](https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/Gram%E2%80%93Schmidt_process.svg/450px-Gram%E2%80%93Schmidt_process.svg.png){ .my-figure7 }
+:::{layout="[-2, 10, -2]"}
+![Gram-Schmidt 분해](https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/Gram%E2%80%93Schmidt_process.svg/450px-Gram%E2%80%93Schmidt_process.svg.png){ style="margin: auto; display: block; border:0px solid #2d2d2d;"}
+:::
 
-<br>
 위의 그림에서 보듯이 $v_2$는 $v_1$ 프로젝션된 벡터와 이와 직교하는 $e_2$와의 합으로 계산할 수 있다. 따라서 $e_2 = v_2 - \Pi_{e_1}(v_2)$가 성립한다. 벡터의 빼기 관점에서 생각해보면 어떨까? $v_2$와 $\Pi_{e_1}(v_2)$의 차이가 $e_2$다. 벡터는 방향과 크기로 정의된다는 점을 다시 기억하자. 같은 방식으로 아래 그림에서 보듯이 더 많은 축과 직교하는 벡터들을 구성할 수 있다. 
 
 이후 $\hat e_i = \dfrac{e_i}{\Vert e_i \Vert}$로 $e_i$를 표준화하면 된다. 
 
-![Gram-Schmidt 3차원 분해](https://gaussian37.github.io/assets/img/math/la/gram_schmidt_process/2.png){ .my-figure7 }
+:::{layout="[-2, 10, -2]"}
+![Gram-Schmidt 3차원 분해](https://gaussian37.github.io/assets/img/math/la/gram_schmidt_process/2.png){ style="margin: auto; display: block; border:0px solid #2d2d2d;"}
+:::
 
 $$
 v = {\rm proj}_{u_1} (v) + {\rm proj}_{u_2}(v) + w
@@ -269,7 +272,7 @@ $$
 1. 착각하지 말아야 할 것! 대각가능 행렬과 역행렬이 존재하는 행렬은 아무 관계가 없다. 둘은 서로 다른 이야기다.
 2. 아이겐분해(eigendecomposition)이란 닮음 행렬을 통해서 기저를 바꾸는 과정인데, 이때 기저를 바꾸는 매트릭스로 동원되는 것이 아이겐벡터 매트릭스다. 
 
-### Eat this! 
+### 외우자! 
 
 1. $A$ positive semidefinite $\Rightarrow$ 아이겐밸류는 비음이다. 
 2. $A$ symmetric $\Rightarrow$ 아이겐밸류는 실수 
